--- a/instalasi-wordpress-ansible/install_wordpress_nginx.yml
+++ b/instalasi-wordpress-ansible/install_wordpress_nginx.yml
@@ -46,6 +46,11 @@
         - mariadb
         - php-fpm
 
+    - name: Install Python MySQL library agar modul Ansible bisa jalan
+      ansible.builtin.package:
+        name: python3-PyMySQL
+        state: present
+
     - name: Pastikan database WordPress ada (via socket auth)
       community.mysql.mysql_db:
         name: "{{ wp_db_name }}"
