--- a/belajar-container/compose.yml
+++ b/belajar-container/compose.yml
@@ -9,3 +9,11 @@ services:
       - 12345:5432
     volumes:
       - ./db-belajar:/var/lib/postgresql/data
+  
+  app-belajar:
+    image: belajar-container:latest
+    environment:
+      #SPRING_DATASOURCE_URL: jdbc:postgresql://10.99.18.57:12345/belajar
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db-belajar:5432/belajar
+    ports:
+      - 10001:8080
