fix nama stage sesuai anjuran docker

--- a/belajar-container/Dockerfile
+++ b/belajar-container/Dockerfile
@@ -1,5 +1,5 @@
 # Tahap 1 : Compile dan Build
-FROM maven:3-amazoncorretto-25-alpine AS BUILDER
+FROM maven:3-amazoncorretto-25-alpine AS builder
 # membuat working folder
 WORKDIR /opt/aplikasi
 # menambahkan pom.xml dari laptop ke dalam container
@@ -12,16 +12,16 @@ COPY src ./src
 RUN mvn package -DskipTests
 
 # Tahap 2 : Extract menjadi layer-layer
-FROM amazoncorretto:25-alpine AS JARLAYER
+FROM amazoncorretto:25-alpine AS jarlayer
 WORKDIR /builder
-COPY --from=BUILDER /opt/aplikasi/target/*.jar application.jar
+COPY --from=builder /opt/aplikasi/target/*.jar application.jar
 RUN java -Djarmode=tools -jar application.jar extract --layers --destination extracted
 
 # Tahap 3 : Build final image
 FROM amazoncorretto:25-alpine
 WORKDIR /application
-COPY --from=JARLAYER /builder/extracted/dependencies/ ./
-COPY --from=JARLAYER /builder/extracted/spring-boot-loader/ ./
-COPY --from=JARLAYER /builder/extracted/snapshot-dependencies/ ./
-COPY --from=JARLAYER /builder/extracted/application/ ./
+COPY --from=jarlayer /builder/extracted/dependencies/ ./
+COPY --from=jarlayer /builder/extracted/spring-boot-loader/ ./
+COPY --from=jarlayer /builder/extracted/snapshot-dependencies/ ./
+COPY --from=jarlayer /builder/extracted/application/ ./
 ENTRYPOINT ["java", "-jar", "application.jar"]
