mengganti hostpath sesuai lokasi folder di laptop, ganti type service menjadi loadbalancer

--- a/belajar-container/k8s/06-webapp.yml
+++ b/belajar-container/k8s/06-webapp.yml
@@ -33,10 +33,9 @@ metadata:
   labels:
     app: belajar-app
 spec:
-  type: NodePort
+  type: LoadBalancer
+  selector:
+    app: belajar-app
   ports:
   - port: 8080
     targetPort: 8080
-    nodePort: 30001
-  selector:
-    app: belajar-app
