--- a/belajar-container/k8s/03-pv.yml
+++ b/belajar-container/k8s/03-pv.yml
@@ -11,4 +11,4 @@ spec:
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: "/mnt/data/postgres"
+    path: "/Users/endymuhardin/tmp/k8s-pv"
