--- a/belajar-container/k8s/examples/06-webapp-clusterip.yml
+++ b/belajar-container/k8s/examples/06-webapp-clusterip.yml
@@ -1,3 +1,6 @@
+# Gunakan file ini jika menggunakan kubectl port-forward atau Ingress
+# Copy file ini menjadi 06-webapp.yml untuk menggunakan ClusterIP
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -33,10 +36,9 @@ metadata:
   labels:
     app: belajar-app
 spec:
-  type: NodePort  # Default untuk Kind cluster
+  type: ClusterIP  # ClusterIP untuk port-forward atau Ingress
   selector:
     app: belajar-app
   ports:
   - port: 8080
     targetPort: 8080
-    nodePort: 30001  # Untuk Kind dengan extraPortMappings
