--- a/belajar-ha/demo-1-stateless-ha/docker-compose-1.yml
+++ b/belajar-ha/demo-1-stateless-ha/docker-compose-1.yml
@@ -3,6 +3,9 @@ services:
   haproxy:
     image: haproxy:2.9-alpine
     container_name: haproxy
+    user: root
+    cap_add:
+      - NET_BIND_SERVICE
     ports:
       - "8080:80"
       - "8404:8404"  # HAProxy Stats
