--- a/belajar-ha/demo-1-stateless-ha/haproxy.cfg
+++ b/belajar-ha/demo-1-stateless-ha/haproxy.cfg
@@ -4,6 +4,18 @@ global
     stats socket /var/run/haproxy.sock mode 600 level admin
     stats timeout 2m
 
+resolvers docker
+    nameserver dns1 10.89.4.1:53
+    resolve_retries 3
+    timeout resolve 1s
+    timeout retry 1s
+    hold other 30s
+    hold refused 30s
+    hold nx 30s
+    hold timeout 30s
+    hold valid 10s
+    hold obsolete 30s
+
 defaults
     log     global
     mode    http
@@ -12,6 +24,7 @@ defaults
     timeout connect 5000ms
     timeout client  50000ms
     timeout server  50000ms
+    timeout check   10000ms
 
 # HAProxy Statistics Dashboard
 frontend stats
@@ -33,6 +46,6 @@ backend nginx_backend
     option httpchk GET /
     http-check expect status 200
 
-    server nginx1 nginx1:80 check inter 2s fall 3 rise 2
-    server nginx2 nginx2:80 check inter 2s fall 3 rise 2
-    server nginx3 nginx3:80 check inter 2s fall 3 rise 2
+    server nginx1 nginx1:80 check inter 2s fall 3 rise 2 resolvers docker init-addr libc,none
+    server nginx2 nginx2:80 check inter 2s fall 3 rise 2 resolvers docker init-addr libc,none
+    server nginx3 nginx3:80 check inter 2s fall 3 rise 2 resolvers docker init-addr libc,none
