--- a/belajar-ha/demo-2-stateful-ha/docker-compose.yml
+++ b/belajar-ha/demo-2-stateful-ha/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   # PostgreSQL Primary (Read/Write)
   postgres-primary:
-    image: postgres:16-alpine
+    image: postgres:17-alpine
     container_name: postgres-primary
     hostname: postgres-primary
     environment:
@@ -12,7 +12,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./primary-data:/var/lib/postgresql/data
+      - ./data/primary:/var/lib/postgresql/data
       - ./init-primary.sh:/docker-entrypoint-initdb.d/init-primary.sh
       - ./pg_hba.conf:/etc/postgresql/pg_hba.conf
     networks:
@@ -33,7 +33,7 @@ services:
 
   # PostgreSQL Replica 1 (Read-Only)
   postgres-replica1:
-    image: postgres:16-alpine
+    image: postgres:17-alpine
     container_name: postgres-replica1
     hostname: postgres-replica1
     environment:
@@ -43,8 +43,9 @@ services:
     ports:
       - "5433:5432"
     volumes:
-      - ./replica1-data:/var/lib/postgresql/data
-      - ./setup-replica.sh:/docker-entrypoint-initdb.d/setup-replica.sh
+      - ./data/replica1:/var/lib/postgresql/data
+      - ./start-replica.sh:/start-replica.sh
+      - ./pg_hba.conf:/etc/postgresql/pg_hba.conf
     networks:
       - postgres-net
     depends_on:
@@ -55,10 +56,11 @@ services:
       interval: 5s
       timeout: 3s
       retries: 5
+    command: ["/bin/sh", "/start-replica.sh"]
 
   # PostgreSQL Replica 2 (Read-Only)
   postgres-replica2:
-    image: postgres:16-alpine
+    image: postgres:17-alpine
     container_name: postgres-replica2
     hostname: postgres-replica2
     environment:
@@ -68,8 +70,9 @@ services:
     ports:
       - "5434:5432"
     volumes:
-      - ./replica2-data:/var/lib/postgresql/data
-      - ./setup-replica.sh:/docker-entrypoint-initdb.d/setup-replica.sh
+      - ./data/replica2:/var/lib/postgresql/data
+      - ./start-replica.sh:/start-replica.sh
+      - ./pg_hba.conf:/etc/postgresql/pg_hba.conf
     networks:
       - postgres-net
     depends_on:
@@ -80,6 +83,7 @@ services:
       interval: 5s
       timeout: 3s
       retries: 5
+    command: ["/bin/sh", "/start-replica.sh"]
 
   # PgBouncer - Connection Pooler (Optional but recommended)
   pgbouncer:
@@ -97,16 +101,25 @@ services:
     depends_on:
       - postgres-primary
 
-  # Application - Demo app untuk testing
-  demo-app:
-    image: postgres:16-alpine
-    container_name: demo-app
+  # PostgreSQL Client - Interactive terminal dengan psql commands
+  psql-client:
+    image: postgres:17-alpine
+    container_name: psql-client
+    environment:
+      PGPASSWORD: postgres
+      PGUSER: postgres
+    volumes:
+      - .:/workspace
+    working_dir: /workspace
     networks:
       - postgres-net
     depends_on:
-      - postgres-primary
-      - postgres-replica1
-      - postgres-replica2
+      postgres-primary:
+        condition: service_healthy
+      postgres-replica1:
+        condition: service_healthy
+      postgres-replica2:
+        condition: service_healthy
     command: sleep infinity
 
 networks:
